--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "materialize-css": "^0.100.2",
-    "web3": "github:ethereum/web3.js",
+    "web3": "^0.20.1",
     "zeppelin-solidity": "^1.5.0"
   }
 }
